# Blog

./: .env.template  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0f579078ac67_create_users_and_posts_tables.py  1de010d38926_add_date_posted_column_to_comments_table.py  460a1b9203de_add_date_posted_collumn_to_posts_table.py  67ba27841414_add_is_blocked_collumns_to_posts_and_.py  79bb5c917844_recreate_missing_migration.py  97a9c68fbfcf_create_tables.py  ff1e271b352a_remove_indexes.py
app/: main.py
app/api/v1/endpoints/: comments.py  posts.py  user.py
app/core/: config.py
app/core/auth/: dependencies.py  utils.py
app/core/reply_generators/: base_ai_reply_generator.py  groq_reply_generator.py
app/core/validation/: base_content_validator.py  groq_validator.py  openai_validator.py
app/db/: base_model.py  init_db.py  session.py
app/dependencies/: repositories.py  services.py
app/models/: __init__.py  comment.py  post.py  user.py
app/repositories/: comment_repository.py  post_repository.py  user_repository.py
app/schemas/: analytics.py  comment.py  jwt.py  post.py  user.py
app/services/: comment_service.py  post_service.py  user_service.py
app/tasks/: init.py
tests/: conftest.py  test_auth.py  test_comment_repository.py  test_post_repository.py  test_user_repository.py
